# llm-autodocs

./: README.md  cli.py  docgen.py  documenters.py  pyproject.toml  requirements.txt
.github/workflows/: publish_pypi.yaml  tests.yaml
src/: autodocs.py  cli.py  documenters.py
